# sharephr-poc

./: simple-servant.cabal  stack.yaml  template.hamlet  template.lucius
app/: Main.hs
src/: Lib.hs
